SERVER-78342 Fix nReturned in slow query logs